feat: support ECDSA JWT signing.
fixes gravitee-io/issues#4059